--- a/ghc2026.md
+++ b/ghc2026.md
@@ -46,17 +46,13 @@ Students, early career engineers, hardware and embedded developers, and security
 
 ## Supporting Links
 
-- Hardware Trojan and Logic Locking Lab Series  
-  https://github.com/surabhimisra/hardware-trojan-detection-experiments  
+- [Hardware Trojan and Logic Locking Lab Series](https://github.com/surabhimisra/hardware-trojan-detection-experiments)
 
-- Portfolio and talks  
-  https://surabhimisra.github.io  
+- [Portfolio and talks](https://surabhimisra.github.io)
 
-- Logic locking guide  
-  https://surabhimisra.github.io/logic-locking-guide  
+- [Logic locking guide](https://surabhimisra.github.io/logic-locking-guide)
 
-- Writing  
-  https://surabhimisra.github.io/writing  
+- [Writing](https://surabhimisra.github.io/writing)
 
 ## Speaker
 
